# ragplus

./: .gitignore  ACCURACY_ANALYSIS.md  FILE_MANIFEST_v0.2.2.md  LICENSE  NEXT_STEPS.md  PHASE1_COMPLETE.txt  README.md  pyproject.toml
.agent/workflows/: improve-accuracy.md
.github/workflows/: workflow.yml
examples/: advanced_rag.py  basic_rag.py
ragplus/: __init__.py  __main__.py  chunker.py  embedder.py  pipeline.py  retriever.py  utils.py  vectorstore.py
ragplus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ragplus/loaders/: __init__.py  base.py  docx_loader.py  pdf_loader.py  text_loader.py
ragplus/retrieval/: __init__.py  bm25.py  hybrid.py  reranker.py
tests/: test_basic.py  test_improvements.py
