[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragplus"
version = "0.1.1"
description = "A lightweight toolkit for building simple and fast RAG (Retrieval-Augmented Generation) pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "muthuvel vishwa", email = "muthuvelvishwa2002@gmail.com" }
]
keywords = ["rag", "retrieval", "embeddings", "vector search", "nlp", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.22.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0"
]


[project.urls]
Homepage = "https://github.com/vishwa7890/ragplus"
Repository = "https://github.com/vishwa7890/ragplus"

[project.scripts]
ragplus-demo = "ragplus.__main__:main"
